fix:[PL-40314] upgrading jre 11 to 17 for legacy delegate (#53756)